[project]
name = "aoc-day1"
version = "0.1.0"
description = "Advent of Code - Day 1"
authors = [
    {name = "SamW94",email = "sam.wild.1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
